--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ MathJax.Hub.Config({
 <td align="left"><p>Peng Wang <br />
 Assistant Professor <br />
 <a href="https://www.cis.um.edu.mo/" target=&ldquo;blank&rdquo;><b>Computer and Information Science</b></a> <br />
-<a href="https://www.um.edu.mo/" target=&ldquo;blank&rdquo;><b>University of Macau</b></a> <br />
+<a href="https://www.um.edu.mo/" target=&ldquo;blank&rdquo;><b>University of Macao</b></a> <br />
 <b>Email</b>: pengw@um.edu.mo <br />
 
 
@@ -47,7 +47,7 @@ Assistant Professor <br />
 </p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>Currently, I am an assistant professor at the Department of <a href="https://www.cis.um.edu.mo/" target=&ldquo;blank&rdquo;><b>Computer and Information Science</b></a> at the <a href="https://www.um.edu.mo/" target=&ldquo;blank&rdquo;><b>University of Macau</b></a>. Before this, I am a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;><b>Laura Balzano</b></a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Qing Qu</b></a> at the <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b></a>. I got my Ph.D. degree under the supervision of Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;><b>Anthony Man-Cho So</b></a>  at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;><b>The Chinese University of Hong Kong</b></a>.  
+<p>Currently, I am an assistant professor at the Department of <a href="https://www.cis.um.edu.mo/" target=&ldquo;blank&rdquo;><b>Computer and Information Science</b></a> at the <a href="https://www.um.edu.mo/" target=&ldquo;blank&rdquo;><b>University of Macao</b></a>. Before this, I am a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;><b>Laura Balzano</b></a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Qing Qu</b></a> at the <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b></a>. I got my Ph.D. degree under the supervision of Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;><b>Anthony Man-Cho So</b></a>  at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;><b>The Chinese University of Hong Kong</b></a>.  
 
 </p>
 <h2>Open Positions (<font color=red size=+0.5><b>Fall 2026</b></font>)</h2>
@@ -62,6 +62,9 @@ Assistant Professor <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[December 2025] I will chair a session at the <a href="https://conferences.cis.um.edu.mo/ieeebigdata2025/" target=&ldquo;blank&rdquo;><b>IEEE International Conference on Big Data</b></a> in Macao!
+</p>
+</li>
 <li><p>[November 2025] I will give a talk at the <a href="https://conf.orsc.org.cn/conferences/detail?id=37" target=&ldquo;blank&rdquo;><b>Conference on Mathematics and AI Science</b></a> in Dongguan, Guangdong! 
 </p>
 </li>
@@ -146,12 +149,24 @@ Assistant Professor <br />
 </ul>
 <h2>Teaching Courses</h2>
 <ul>
-<li><p><b>CISC7402 Mathematics for Artificial Intelligence</b> (Fall 2025)</p>
+<li><p><b>CISC7402 Mathematics for Artificial Intelligence</b> (Fall 2025)
+</p>
+</li>
+</ul>
+<h2>Service</h2>
+<ul>
+<li><p>Area Chair of <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL</b></a> (2024-Present)
+</p>
+</li>
+<li><p>Reviewers of <b>SIAM Journal on Optimization</b>, <b>Operation Research</b>, <b>Journal of Machine Learning Research</b>, <b>IEEE Transactions on Information Theory</b>, <b>IEEE Transactions on Pattern Analysis and Machine Intelligence</b>, <b>Journal of Global Optimization</b>
+</p>
+</li>
+<li><p>Reviewers of <b>ICML</b> (2021-Present), <b>NeurIPS</b> (2022-Present), <b>ICLR</b> (2023-Present) </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-09 12:59:24 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-12-19 11:14:03 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
