--- a/index.html
+++ b/index.html
@@ -114,21 +114,11 @@ Assistant Professor <br />
 </p>
 </li>
 <li><p>[Jan 2025] I will give a presenation in <a href="https://ims.nus.edu.sg/events/ims_forummath2025_am/" target=&ldquo;blank&rdquo;><b>IMS Young Mathematical Scientists Forum</b></a> at National University of Singapore! 
-</p>
-</li>
-<li><p>[Dec 2024] <a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding modality gap in multimodal learning is posted! 
-</p>
-</li>
-<li><p>[Dec 2024] I will serve as an <b>area chair</b> of <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CAPL 2025</b></a>!
-</p>
-</li>
-<li><p>[Oct 2024] I will chair a session and give a lecture presentation on diffusion models in <a href="https://cmsworkshops.com/Asilomar2024/view_paper.php?PaperNum=1469" target=&ldquo;blank&rdquo;><b>Asilomar 2024</b></a> at Pacific Grove, CA!
-</p>
-</li>
-<li><p>[Oct 2024] <b>Two paper</b> on diffusion models get accepted by <a href="https://sites.google.com/view/m3l-2024/home?authuser=0" target=&ldquo;blank&rdquo;><b>NeurIPS Workshop on Mathematics of Modern Machine Learning</b></a>! 
-</p>
-</li>
-<li><p>[Sep 2024] I will give a talk on diffusion models in <a href="https://ece.engin.umich.edu/event/tbd-24" target=&ldquo;blank&rdquo;><b>ECE Communications and Signal Processing Seminars</b></a> at the University of Michigan! 
+
+
+
+
+
 
 
 </p>
@@ -152,6 +142,9 @@ Assistant Professor <br />
 <li><p><b>CISC7402 Mathematics for Artificial Intelligence</b> (Fall 2025)
 </p>
 </li>
+<li><p><b>CISC3023 Machine Learning</b> (Spring 2026, <a href="https://www.dropbox.com/scl/fi/143q3re2fzwybqps2rm57/CISC3023.pdf?rlkey=rlfcxoxrwup67to6kyvelkauo&amp;st=8md2vwmr&amp;dl=0" target=&ldquo;blank&rdquo;><b>Syllabus</b></a>) 
+</p>
+</li>
 </ul>
 <h2>Service</h2>
 <ul>
@@ -166,7 +159,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-19 11:14:03 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-12-25 00:21:56 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
