--- a/lab.html
+++ b/lab.html
@@ -43,7 +43,22 @@ MathJax.Hub.Config({
 </ul>
 <h2>Members </h2>
 <ul>
-<li><p><b>Principal Investigator</b>: Peng Wang  </p>
+<li><p><b>Principal Investigator</b>: Peng Wang  
+
+</p>
+</li>
+</ul>
+<h2>Supported Grants</h2>
+<p>
+</p>
+<ul>
+<li><p>Macau Science and Technology Development Fund (FDCT), <b>PI</b>, &lsquo;&lsquo;Foundations of Deep Learning Optimization: Understanding Loss Landscapes, Training Dynamics, and Generalization&rsquo;&rsquo;, Dec 2025 - Dec 2027, FDCT/0091/2025/ITP2, 377K MOP
+</p>
+</li>
+<li><p>Technology and Innovation Start-up Funding Scheme, University of Macau
+</p>
+</li>
+<li><p>Start-up Research Grant, University of Macau</p>
 </li>
 </ul>
 </td>
