--- a/lab.html
+++ b/lab.html
@@ -36,7 +36,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Introduction</h2>
 <ul>
-<li><p><b>OptAI Lab</b> is dedicated to advancing the theoretical foundations and practical methodologies of optimization in modern machine learning. Our research lies at the intersection of <b>optimization</b>, <b>statistics</b>, and <b>AI</b>, aiming to understand and improve the training, generalization, and interpretability of deep learning and AI models.
+<li><p><b>OptAI Lab</b> is dedicated to advancing the theoretical foundations and practical methodologies of optimization in modern machine learning. Our research lies at the intersection of <b>optimization</b>, <b>machine learning</b>, and <b>AI</b>, aiming to understand and improve the training, generalization, and interpretability of deep learning and AI models.
 
 </p>
 </li>
@@ -52,7 +52,7 @@ MathJax.Hub.Config({
 <p>
 </p>
 <ul>
-<li><p>Macau Science and Technology Development Fund (FDCT), <b>PI</b>, &lsquo;&lsquo;Foundations of Deep Learning Optimization: Understanding Loss Landscapes, Training Dynamics, and Generalization&rsquo;&rsquo;, Dec 2025 - Dec 2027, FDCT/0091/2025/ITP2, 377K MOP
+<li><p>Macau Science and Technology Development Fund (FDCT), <b>PI</b>, <i>Toward Theoretical Foundations of Diffusion Models: Principles from Optimization to Generalization</i>, Dec 2025 - Dec 2027, FDCT/0091/2025/ITP2, 377K MOP
 </p>
 </li>
 <li><p>Technology and Innovation Start-up Funding Scheme, University of Macau
