--- a/lab.html
+++ b/lab.html
@@ -52,7 +52,7 @@ MathJax.Hub.Config({
 <p>
 </p>
 <ul>
-<li><p>Macau Science and Technology Development Fund (FDCT), <b>PI</b>, <i>Toward Theoretical Foundations of Diffusion Models: Principles from Optimization to Generalization</i>, Dec 2025 - Dec 2027, FDCT/0091/2025/ITP2, 377K MOP
+<li><p>Macau Science and Technology Development Fund (FDCT) (Funding Scheme for Innovation and Technology Promotion), <b>PI</b>, <i>Toward Theoretical Foundations of Diffusion Models: Principles from Optimization to Generalization</i>, Dec 2025 - Dec 2027, FDCT/0091/2025/ITP2, 377K MOP
 </p>
 </li>
 <li><p>Technology and Innovation Start-up Funding Scheme, University of Macau
