--- a/publication.html
+++ b/publication.html
@@ -86,7 +86,7 @@ MathJax.Hub.Config({
 </ol>
 <h2>Journal Papers </h2>
 <ol>
-<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. Accepted for publication in <font color=darkblue size=+0.5><b>Journal of Machine Learning Research</b></font>, 2025. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. Accepted for publication in <font color=darkblue size=+0.5><b>Journal of Machine Learning Research</b></font>, 2025. [<a href="https://jmlr.org/papers/volume26/24-0047/24-0047.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 
 </p>
 </li>
