--- a/publication.html
+++ b/publication.html
@@ -86,11 +86,11 @@ MathJax.Hub.Config({
 </ol>
 <h2>Journal Papers </h2>
 <ol>
-<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. Accepted for publication in <font color=darkblue size=+0.5><b>Journal of Machine Learning Research</b></font>, 2025. [<a href="https://jmlr.org/papers/volume26/24-0047/24-0047.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal Difference-of-Convex Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <font color=darkblue size=+0.5><b>INFORMS Journal on Computing</b></font>, 2025. [<a href="https://pubsonline.informs.org/doi/abs/10.1287/ijoc.2024.0648" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/peng8wang/2024.0648" target=&ldquo;blank&rdquo;><b>code</b></a>] 
 
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal Difference-of-Convex Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <font color=darkblue size=+0.5><b>INFORMS Journal on Computing</b></font>, 2025. [<a href="https://pubsonline.informs.org/doi/abs/10.1287/ijoc.2024.0648" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/peng8wang/2024.0648" target=&ldquo;blank&rdquo;><b>code</b></a>] 
+<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. <font color=darkblue size=+0.5><b>Journal of Machine Learning Research</b></font> (2025) 26(220):1-61. [<a href="https://jmlr.org/papers/volume26/24-0047/24-0047.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/Heimine/PNC_DLN" target=&ldquo;blank&rdquo;><b>code</b></a>] 
 
 </p>
 </li>
