--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Assistant Professor <br />
 
 </p>
 <h2>Open Positions (<font color=red size=+0.5><b>Fall 2026</b></font>)</h2>
-<p>I am actively seeking PhD students with a strong background in mathematics or programming. Research assistants and postdoctoral positions are also available. If you are interested, please feel free to contact me directly! Please visit <a href="position.html" target=&ldquo;blank&rdquo;><b>here</b></a> for more information!
+<p>I am actively seeking <b>PhD students</b> with a strong background in mathematics or programming. <b>Research assistants</b> and <b>postdoc</b> positions are also available. If you are interested, please feel free to contact me directly! Please visit <a href="position.html" target=&ldquo;blank&rdquo;><b>here</b></a> for more information!
 </p>
 <h2>Research Interests </h2>
 <p>Broadly speaking, my research interest lies in the intersects of <b>optimization</b>, <b>machine learning</b>, and <b>artificial intelligence</b>. Currently, I am devoted to understanding <b>mathematical foundations of deep learning and generative AI models</b>, including supervised learning models, diffusion models, and large language models. I mainly study how low-complexity structures (e.g., low-rankness, sparsity, over-parameterization) in practical problems lead to favorable optimization properties and use them to mitigate the challenges caused by worst-case scenarios, enable efficient optimization, and improve our understanding of learning phenomena. 
@@ -159,7 +159,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-25 00:21:56 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-12-30 15:00:31 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
