--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Assistant Professor <br />
 </ul>
 <h2>Service</h2>
 <ul>
-<li><p>Area Chair of <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL</b></a> (2024-Present)
+<li><p>Area Chairs of <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR</b></a> (2026), <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL</b></a> (2024-Present)
 </p>
 </li>
 <li><p>Reviewers of <b>SIAM Journal on Optimization</b>, <b>Operation Research</b>, <b>Journal of Machine Learning Research</b>, <b>IEEE Transactions on Information Theory</b>, <b>IEEE Transactions on Pattern Analysis and Machine Intelligence</b>, <b>Journal of Global Optimization</b>
@@ -159,7 +159,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-30 15:00:31 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-01-16 12:03:06 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
