--- a/publication.html
+++ b/publication.html
@@ -56,7 +56,7 @@ MathJax.Hub.Config({
 
 </p>
 </li>
-<li><p>Huijie Zhang, Zijian Huang, Siyi Chen, Jinfan Zhou, Zekai Zhang, Peng Wang, Qing Qu. Understanding Generalization in Diffusion Models via Probability Flow Distance. [<a href="https://arxiv.org/pdf/2505.20123" target=&ldquo;blank&rdquo;><b>paper</b></a>]  
+<li><p>Huijie Zhang, Zijian Huang, Siyi Chen, Jinfan Zhou, Zekai Zhang, <b>Peng Wang</b>, Qing Qu. Understanding Generalization in Diffusion Models via Probability Flow Distance. [<a href="https://arxiv.org/pdf/2505.20123" target=&ldquo;blank&rdquo;><b>paper</b></a>]  
 
 </p>
 </li>
