--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ Assistant Professor <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[January 2026] [<a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>One paper</b></a>] is accepted by <b>AISTATS 2026</b>!
+</p>
+</li>
 <li><p>[December 2025] I will chair a session at the <a href="https://conferences.cis.um.edu.mo/ieeebigdata2025/" target=&ldquo;blank&rdquo;><b>IEEE International Conference on Big Data</b></a> in Macao!
 </p>
 </li>
@@ -151,7 +154,7 @@ Assistant Professor <br />
 <li><p>Area Chairs of <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR</b></a> (2026), <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL</b></a> (2024-Present)
 </p>
 </li>
-<li><p>Reviewers of <b>SIAM Journal on Optimization</b>, <b>Operation Research</b>, <b>Journal of Machine Learning Research</b>, <b>IEEE Transactions on Information Theory</b>, <b>IEEE Transactions on Pattern Analysis and Machine Intelligence</b>, <b>Journal of Global Optimization</b>
+<li><p>Reviewers of <b>SIAM Journal on Optimization</b>, <b>Operation Research</b>, <b>Journal of the American Statistical Association</b>, <b>Journal of Machine Learning Research</b>, <b>IEEE Transactions on Information Theory</b>, <b>IEEE Transactions on Pattern Analysis and Machine Intelligence</b>, <b>IEEE Transactions on Image Processing</b>, <b>Information and Inference: A Journal of the IMA</b>, <b>Journal of Global Optimization</b>, etc.
 </p>
 </li>
 <li><p>Reviewers of <b>ICML</b> (2021-Present), <b>NeurIPS</b> (2022-Present), <b>ICLR</b> (2023-Present) </p>
@@ -159,7 +162,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-16 12:03:06 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-01-23 00:44:28 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
