--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Assistant Professor <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[January 2026] [<a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>One paper</b></a>] is accepted by <b>AISTATS 2026</b>!
+<li><p>[January 2026] <a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>One paper</b></a> is accepted by <b>AISTATS 2026</b>!
 </p>
 </li>
 <li><p>[December 2025] I will chair a session at the <a href="https://conferences.cis.um.edu.mo/ieeebigdata2025/" target=&ldquo;blank&rdquo;><b>IEEE International Conference on Big Data</b></a> in Macao!
@@ -162,7 +162,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-23 00:44:28 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-01-23 10:03:39 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
