--- a/publication.html
+++ b/publication.html
@@ -36,19 +36,16 @@ MathJax.Hub.Config({
 </div>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ol>
-<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). A Complete Loss Landscape Analysis of Regularized Deep Matrix Factorization, Under revision in <b>SIAM Journal on Optimization</b>, 2025. [<a href="https://arxiv.org/pdf/2506.20344" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). A Complete Loss Landscape Analysis of Regularized Deep Matrix Factorization. Under revision in <b>SIAM Journal on Optimization</b>, 2025. [<a href="https://arxiv.org/pdf/2506.20344" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 
 </p>
 </li>
 <li><p><b>Peng Wang</b>*\(^\dagger\), Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. Under revision in <b>Journal of Machine Learning Research</b>, 2025. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] (<b>NeurIPS 2024 M3L Workshop</b> &amp; <b>ICLR 2025 DeLTa Workshop</b>) 
 
-</p>
-</li>
-<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Laura Balzano\(^\dagger\), Tianjiao Ding\(^\dagger\), Benjamin D. Haeffele, Soo Min Kwon, Qing Qu, <b>Peng Wang</b>\(^\dagger\), Zhangyang Wang, Can Yaras. An Overview of Low-Rank Structures in the Training and Adaptation of Large Models. Under minor revision in <b>IEEE Signal Processing Magazine</b>, 2025. [<a href="https://arxiv.org/pdf/2503.19859" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 
 </p>
 </li>
-<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks, Under major revision in <b>Mathematics of Operations Research</b>, 2026. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks. Under major revision in <b>Mathematics of Operations Research</b>, 2026. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 
 
 </p>
@@ -83,6 +80,10 @@ MathJax.Hub.Config({
 </ol>
 <h2>Journal Papers </h2>
 <ol>
+<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Laura Balzano\(^\dagger\), Tianjiao Ding\(^\dagger\), Benjamin D. Haeffele, Soo Min Kwon, Qing Qu, <b>Peng Wang</b>\(^\dagger\), Zhangyang Wang, Can Yaras. An Overview of Low-Rank Structures in the Training and Adaptation of Large Models. Accepted for publication in <font color=darkblue size=+0.5><b>IEEE Signal Processing Magazine</b></font>, 2026. [<a href="https://arxiv.org/pdf/2503.19859" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/girasole/SPM-LowRankDeepLearning" target=&ldquo;blank&rdquo;><b>code</b></a>] 
+
+</p>
+</li>
 <li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal Difference-of-Convex Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <font color=darkblue size=+0.5><b>INFORMS Journal on Computing</b></font>, 2025. [<a href="https://pubsonline.informs.org/doi/abs/10.1287/ijoc.2024.0648" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/peng8wang/2024.0648" target=&ldquo;blank&rdquo;><b>code</b></a>] 
 
 </p>
