--- a/index.html
+++ b/index.html
@@ -62,31 +62,34 @@ Assistant Professor <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[January 2026] <a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>One paper</b></a> is accepted by <b>AISTATS 2026</b>!
+<li><p>[Feb 2026] <a href="https://arxiv.org/pdf/2503.19859" target=&ldquo;blank&rdquo;><b>Our paper</b></a> is accepted by <b>IEEE Signal Processing Magazine</b> <a href="https://signalprocessingsociety.org/events/ieee-spm-special-issue-mathematics-deep-learning" target=&ldquo;blank&rdquo;><b>Special Issue on the Mathematics of Deep Learning</b></a>. Thanks to all my collaborators!
 </p>
 </li>
-<li><p>[December 2025] I will chair a session at the <a href="https://conferences.cis.um.edu.mo/ieeebigdata2025/" target=&ldquo;blank&rdquo;><b>IEEE International Conference on Big Data</b></a> in Macao!
+<li><p>[Jan 2026] <a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>One paper</b></a> is accepted by <b>AISTATS 2026</b>!
 </p>
 </li>
-<li><p>[November 2025] I will give a talk at the <a href="https://conf.orsc.org.cn/conferences/detail?id=37" target=&ldquo;blank&rdquo;><b>Conference on Mathematics and AI Science</b></a> in Dongguan, Guangdong! 
+<li><p>[Dec 2025] I will chair a session at the <a href="https://conferences.cis.um.edu.mo/ieeebigdata2025/" target=&ldquo;blank&rdquo;><b>IEEE International Conference on Big Data</b></a> in Macao!
 </p>
 </li>
-<li><p>[October 2025] I will give a talk at the <a href="https://conferences.cis.um.edu.mo/HKUSTGZ_UM_DS2025/" target=&ldquo;blank&rdquo;><b>HKUST(GZ) & UM Data Science Workshop</b></a> at the University of Macau! 
+<li><p>[Nov 2025] I will give a talk at the <a href="https://conf.orsc.org.cn/conferences/detail?id=37" target=&ldquo;blank&rdquo;><b>Conference on Mathematics and AI Science</b></a> in Dongguan, Guangdong! 
 </p>
 </li>
-<li><p>[October 2025] I will give a presentation at the <a href="https://www.sta.cuhk.edu.hk/events/understanding-distribution-learning-of-diffusion-models-via-low-dimensional-modeling/" target=&ldquo;blank&rdquo;><b>seminar</b></a> hosted by the Department of Statistics and Data Science at the Chinese University of Hong Kong! 
+<li><p>[Oct 2025] I will give a talk at the <a href="https://conferences.cis.um.edu.mo/HKUSTGZ_UM_DS2025/" target=&ldquo;blank&rdquo;><b>HKUST(GZ) & UM Data Science Workshop</b></a> at the University of Macau! 
 </p>
 </li>
-<li><p>[September 2025] <a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding feature learning of diffusion models is accepted by <b>NeurIPS 2025</b>!
+<li><p>[Oct 2025] I will give a presentation at the <a href="https://www.sta.cuhk.edu.hk/events/understanding-distribution-learning-of-diffusion-models-via-low-dimensional-modeling/" target=&ldquo;blank&rdquo;><b>seminar</b></a> hosted by the Department of Statistics and Data Science at the Chinese University of Hong Kong! 
 </p>
 </li>
-<li><p>[August 2025] <a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>Our paper</b></a> on understanding <b>hierarchical representation learning</b> of deep neural networks is accepted by <a href="https://jmlr.org/" target=&ldquo;blank&rdquo;><b>JMLR</b></a>!  
+<li><p>[Sep 2025] <a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding feature learning of diffusion models is accepted by <b>NeurIPS 2025</b>!
 </p>
 </li>
-<li><p>[August 2025] Our new book <a href="https://ma-lab-berkeley.github.io/deep-representation-learning-book/" target=&ldquo;blank&rdquo;><b>Learning Deep Representations of Data Distributions</b></a> is posted online! Thanks for my wonderful collaborators Dr. Sam Buchanan, Druv Pai, and Prof. Yi Ma! 
+<li><p>[Aug 2025] <a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>Our paper</b></a> on understanding <b>hierarchical representation learning</b> of deep neural networks is accepted by <a href="https://jmlr.org/" target=&ldquo;blank&rdquo;><b>JMLR</b></a>!  
 </p>
 </li>
-<li><p>[June 2025] <a href="https://arxiv.org/abs/2506.20344" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the global loss landscape analyais of deep matrix factorization is posted! 
+<li><p>[Aug 2025] Our new book <a href="https://ma-lab-berkeley.github.io/deep-representation-learning-book/" target=&ldquo;blank&rdquo;><b>Learning Deep Representations of Data Distributions</b></a> is posted online! Thanks for my wonderful collaborators Dr. Sam Buchanan, Druv Pai, and Prof. Yi Ma! 
+</p>
+</li>
+<li><p>[Jun 2025] <a href="https://arxiv.org/abs/2506.20344" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the global loss landscape analyais of deep matrix factorization is posted! 
 </p>
 </li>
 <li><p>[May 2025] <a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding the mechenism of transformers has been accepted by <b>ICML 2025</b>! 
@@ -162,7 +165,7 @@ Assistant Professor <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-23 10:03:39 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2026-02-10 10:08:30 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
